@@ -546,6 +546,17 @@ static void to_cache(ARGS *args)
 		failed();
 	}
 
+	if (stat(tmp_obj, &st) != 0) {
+		cc_log("The compiler didn't produce an object file");
+		stats_update(STATS_NOOUTPUT);
+		failed();
+	}
+	if (st.st_size == 0) {
+		cc_log("The compiler produced an empty object file");
+		stats_update(STATS_EMPTYOUTPUT);
+		failed();
+	}
+
 	compress = !getenv("CCACHE_NOCOMPRESS");
 
 	if (stat(tmp_stderr, &st) != 0) {
