@@ -43,6 +43,8 @@ enum stats {
 	STATS_UNSUPPORTED,
 	STATS_OUTSTDOUT,
 	STATS_CACHEHIT_DIR,
+	STATS_NOOUTPUT,
+	STATS_EMPTYOUTPUT,
 
 	STATS_END
 };
